--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -8,7 +8,6 @@ layout: post
 categories: chapter
 title: 4. Emerging Learning Designs
 ---
-
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
 -   [Exploring issues and context from practitioner interviews and
@@ -34,13 +33,10 @@ title: 4. Emerging Learning Designs
             audience](#wider-objective---making-games-for-an-audience)
         -   [Intermediate Objective - Implementing a game
             element](#intermediate-objective---implementing-a-game-element)
-    -   [Commentary the use of AT scopes in data
-        ANALYSIS](#commentary-the-use-of-at-scopes-in-data-analysis)
-        -   [Levels of Abstraction om this design (perhaps
-            drop?)](#levels-of-abstraction-om-this-design-perhaps-drop)
 -   [Conflicts and design tensions experienced by participants and
     facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
-    -   [Facilitator Design Tensions](#facilitator-design-tensions)
+    -   [Design tensions experienced as a researcher /
+        designer](#design-tensions-experienced-as-a-researcher-designer)
         -   [Tensions surrounding authenticity of coding environment /
             template](#tensions-surrounding-authenticity-of-coding-environment-template)
 -   [Participant conflicts /
@@ -61,11 +57,11 @@ title: 4. Emerging Learning Designs
         Paradox](#facilitator-conflict-addressing-the-play-paradox)
         -   [Learning Dimensions Map](#learning-dimensions-map)
     -   [Limits to this map - MOVE?](#limits-to-this-map---move)
-        -   [Using Physical Maps of Missions as Game Design
-            Patterns](#using-physical-maps-of-missions-as-game-design-patterns)
-    -   [Including Coding Concepts in the Learning Map and including
-        Code Cards with links to online
-        Concepts](#including-coding-concepts-in-the-learning-map-and-including-code-cards-with-links-to-online-concepts)
+        -   [Including Coding Concepts in the Learning Map and including
+            Code Cards with links to online
+            Concepts](#including-coding-concepts-in-the-learning-map-and-including-code-cards-with-links-to-online-concepts)
+    -   [Using Physical Maps of Missions as Game Design Patterns -
+        DROP?](#using-physical-maps-of-missions-as-game-design-patterns---drop)
 -   [Further discussion of learning design - HOLDING SECTION
     CURRENTLY](#further-discussion-of-learning-design---holding-section-currently)
     -   [Discussion on Authenticity from methods chapter moved
@@ -469,9 +465,9 @@ Other participants were less proficient using this online resources and used pri
 
 <!-- Explore the dividing line  -->
 
-As explored in the previous chapter, Barab and colleagues
+As explored in the previous chapter, Barab and colleagues, outline the value of a more granular approach to analysis of nested activity systems.
 
-In the next section narrower actions within this
+In the next section narrower actions still within this system are explored as discreet actions which combine to be come the activity of implementing a game pattern.
 
 <!-- | **Subject**         | **Objective**             | **Tools & Processes**         
 |----------------|-----------|------------|
@@ -552,12 +548,9 @@ In the process of reflection on sessions I both observed and project tensions be
 
 In the following sections of this chapter I focus on such which relate directly to the research questions and which help inform the findings of later chapters. In particular I draw out more visible conflicts which threaten more serious distruption of activities.
 
-### Facilitator Design Tensions
+### Design tensions experienced as a researcher / designer
 
-Proactive choices.
-Lack user oriented data. Projected experience / intuitive.  
-And drawn from motivations / objectives of researcher.
-
+This section is writen from my own perspectives to inform discussion on design tensions. The process here is driven not only from user feedback but also on a more intuitive experience as an experienced facilitator in this field. I also draw on the tensions explored in the previous exploration of fellow participants. I  focus on tensions involving authenticity as a precursor to exploring their relationshiop with participation experience of agency.
 
 #### Tensions surrounding authenticity of coding environment / template
 
@@ -880,7 +873,68 @@ Note - while the use of these skills is not unique to game making and common to 
 NOTE - The map could easily be changed to reflect this or other foci of teachers / researchers.
 
 
-#### Using Physical Maps of Missions as Game Design Patterns
+
+#### Including Coding Concepts in the Learning Map and including Code Cards with links to online Concepts
+
+Recap here the choice of coding concepts rather that CT in more abstract terms.
+
+- Make Code cards which contained links to game design patterns and the different component concepts
+- (see Eriksson and Bjork)
+- Draw on material and critique in chapter on semantic profiles / waves.
+
+<!-- A theme to follow up in the Maps / personal learning chapter is that of picking up on some of the behaviour of participants, especially that of experienced parents, experience either in coding practices of supporting their children. Once identified, how could beneficial interactions be encouraged in the next iteration of design.
+
+Examples include;
+
+- supporting reflection on design and coding concepts / skills.
+- navigation / organisational support - use of a physical map.
+
+For example, the use of CT concepts in a framework, listed as part of the initial design pattern card, which could then be discussed, ticked off or otherwise reflected on. -->
+
+
+
+
+**Facilitators may need to justify learning happening and struggle to see this in-situ if unfamiliar with the game making process. This may restrict openness of activities to better assess and support learning.**
+A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators.
+
+
+**tension adapting resources to a curriculum environment**
+There were some additional changes in the way that design patterns were presented to learners mirroring design patterns on other domains including: name; need ; related patterns. In addition related concepts in computational thinking and design processes which are promoted as part of the recent computing curriculum were included and linked to a learning dimensions map.
+ <!-- .  WHERE TO PUT EXAMPLE? of design pattern current -->
+
+In addition, material which mapped and explained learning dimensions including design skills and computational concepts were included in the participant support resources.
+
+**Addition of a Game Challenge section**
+
+I wanted to explore the possibility to use this model to explore systems thinking. There is precedent to do this in GSM.
+
+It was driven in a response to meaningful missions which helped guide a focus on game play.
+
+I created such missions (outlined in Methods chapter)
+Added game design patterns based on challenge - find source Schnell & GSM literature (their terminology is Game elements)
+And then updated the learning map to highlight potential concepts to be learned.
+
+**Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities.**
+
+Systems related missions were designed. (If so not clearly tested) Challenge section in particular mirrors systems concepts.
+
+Extra missions which highlight game challenge and user experience may help learners to explore systems concepts within the game context
+
+<!-- ### Stages of Design
+
+#### Evolution of Template and supporting resources
+I'm not sure if this even goes into this chapter - it certainly starts to answer some of the research questions.
+Go into more detail than previously on the choice and use of tools.
+Use the 3M framework as a guide for MakeCode
+Revisit FM book as a guide for Glitch/ Phaser
+
+
+### Issues Emerging from Evolution of Design
+More detailed analysis - thoughts on validity of data -->
+
+
+
+### Using Physical Maps of Missions as Game Design Patterns - DROP?
 
 Maps in the 3M model were explored partly as a way of representing the personal dimension of learning.
 
@@ -975,65 +1029,6 @@ The use of a physical map on which GDP were arranged aimed to communicate which 
 
 
 
-
-
-### Including Coding Concepts in the Learning Map and including Code Cards with links to online Concepts
-
-Recap here the choice of coding concepts rather that CT in more abstract terms.
-
-- Make Code cards which contained links to game design patterns and the different component concepts
-- (see Eriksson and Bjork)
-- Draw on material and critique in chapter on semantic profiles / waves.
-
-<!-- A theme to follow up in the Maps / personal learning chapter is that of picking up on some of the behaviour of participants, especially that of experienced parents, experience either in coding practices of supporting their children. Once identified, how could beneficial interactions be encouraged in the next iteration of design.
-
-Examples include;
-
-- supporting reflection on design and coding concepts / skills.
-- navigation / organisational support - use of a physical map.
-
-For example, the use of CT concepts in a framework, listed as part of the initial design pattern card, which could then be discussed, ticked off or otherwise reflected on. -->
-
-
-
-
-**Facilitators may need to justify learning happening and struggle to see this in-situ if unfamiliar with the game making process. This may restrict openness of activities to better assess and support learning.**
-A map of learning dimensions flexibly linked to main missions/patterns can be used by both learners and facilitators.
-
-
-**tension adapting resources to a curriculum environment**
-There were some additional changes in the way that design patterns were presented to learners mirroring design patterns on other domains including: name; need ; related patterns. In addition related concepts in computational thinking and design processes which are promoted as part of the recent computing curriculum were included and linked to a learning dimensions map.
- <!-- .  WHERE TO PUT EXAMPLE? of design pattern current -->
-
-In addition, material which mapped and explained learning dimensions including design skills and computational concepts were included in the participant support resources.
-
-**Addition of a Game Challenge section**
-
-I wanted to explore the possibility to use this model to explore systems thinking. There is precedent to do this in GSM.
-
-It was driven in a response to meaningful missions which helped guide a focus on game play.
-
-I created such missions (outlined in Methods chapter)
-Added game design patterns based on challenge - find source Schnell & GSM literature (their terminology is Game elements)
-And then updated the learning map to highlight potential concepts to be learned.
-
-**Systems concepts are embedded in many games but the process of direct teaching of such systems can be complex and interrupt and distract from other design activities.**
-
-Systems related missions were designed. (If so not clearly tested) Challenge section in particular mirrors systems concepts.
-
-Extra missions which highlight game challenge and user experience may help learners to explore systems concepts within the game context
-
-<!-- ### Stages of Design
-
-#### Evolution of Template and supporting resources
-I'm not sure if this even goes into this chapter - it certainly starts to answer some of the research questions.
-Go into more detail than previously on the choice and use of tools.
-Use the 3M framework as a guide for MakeCode
-Revisit FM book as a guide for Glitch/ Phaser
-
-
-### Issues Emerging from Evolution of Design
-More detailed analysis - thoughts on validity of data -->
 
 
 ## Further discussion of learning design - HOLDING SECTION CURRENTLY
