narrative of conflicts

--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -227,7 +227,7 @@ https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/
 
 ## Commentary on evolution of design by Phase
 
-### Explorations and innovations in P1 and P2
+### P1 and P2: Explorations and innovations
 
 <!-- NOTE - The evolution involves phases and then tension - what and how to cover both?  -->
 <!-- This phase took place before the official start of this research and relevant ethics application. As such,  -->
@@ -367,7 +367,7 @@ I translated player types to maker types based on notes in my observation journa
 so there's a problem in getting any data from this
 however the rationale is intact and  -->
 
-### P5 - Adapting to MakeCode Arcade
+### P5: Adapting to MakeCode Arcade and more formal settings
 
 I ran two iterations of game making course of 4-5 weeks using MakeCode Arcade tool. MakeCode Arcade uses block language system. The template, resources and facilitation approach was based that of P3 and P4.
 
@@ -606,7 +606,7 @@ Beyond the design tensions above that were smaller in scope and addressed relati
 
 ### 1. Identity hardcore coding & disfunctional group work - P1
 
-**Learner anxiety if hardcore coding environment and peer working dynamics**
+For some families and individual participants there were conflicts to do with a sense of anxiety and alienation from the group coding environment and associated peer working dynamics.
 
 One family dropped out and in their exit interview they shared that at one point we looked around and just saw people doing hardcore coding and we no longer felt at home in the environment. In this emergent design, they had mostly completed asset design and narrative development and the only coding remained. I thus wanted to address the tension between completing the project and alienation from just coding.
 
@@ -618,7 +618,6 @@ I was struck that his incident happened during a session where I had not played 
 -   A concern for the fragility of learners positive affect towards the group game making process and thus the need for initial playful starting and closing activities to be continued beyond initial sessions.
 -   The value of a stronger buy-in by participants, ideally a greater commitment to the collective making process balanced with the need for low pressure (avoiding a negative sense of obligation).
 
-
 **Encouraging peer learning vs social restrictions**
 
 This tensions was resolved partly by freeing up some patterns of collaboration and interaction and removing others.
@@ -627,22 +626,43 @@ In terms of accessing technical help I was given feedback from one parent that a
 The same family also gave useful feedback about social norms of not bothering people getting in the way of asking for help.
 
 The process of parents getting in the way of children's not minding jumping in and invading social space struck me. Together with the frustrations of complexities of larger group work the restrictions created a tension between the suggested community norm of how division of labour was organised.
+
 Thus in the next iteration, rather than the larger groups, smaller groups, allowing some children to work by themselves and others with parents. Avoiding large group framentation and encouraging freedom of participation vs benefitting from parental involvement.
+
+These tensions are mirrored in similar research and were highlighted in the practitioner interviews that I conducted.
 
 The fruits of this freedom of participation are explored in chapter five.
 
-<!-- NOTE See this source
-https://docs.google.com/document/d/1VL8FPnrBUbcpwL1nmGLCsF1t2JjkitQV_3N8DYeFcoM/edit
- -->
 
-### 2. Participant experience of Contradiction - Conflict - not enough support available
+#### Navigating the conflict
 
-The nature of this conflict was compounded tensions
+**Barrier - lack of software feedback - MOVE TO NEXT SECTION OR KEEP HERE AS A LINK?**
 
-**Conflict / Barrier - Learners difficulties  writing valid code**
+One design principle explored in the literature review [@resnick_designing_2013] in the use of creative coding tools was that of immediate feedback for participants. Code playgrounds provide such immediate feedback. For example, in the code editing interface of glitch.com shown in Illustration 1, changes made to the code on the left section take immediate effect in the resultant game on the right side of the screen.
 
-Code playground provides immediate feedback. I chose a code editing tool set which drew on relevant design principles explored in the literature review (Resnick and Rosenbaum, 2013).
-One of the principles that I prioritised in the choice of tools was that of immediate feedback for participants. For example, in the code editing interface of glitch.com shown in Illustration 1, changes made to the code on the left section take immediate effect in the resultant game on the right side of the screen.
+INSERT SIDE BY SIDE SCREEN SHOT
+
+MOVE NEXT?
+
+**Narrative summary of conflict**
+
+The conflict comprised of compounding factors.
+
+### 2. Participant conflict due to lack of relevant technical support
+
+The nature of this conflict was compounded tensions surrounding  and knowledge of coding and lack of access to relevant technical support. While tensions between lack of knowledge in how to undertake activities are common in learning environments, the informal nature of this learning setting made most classroom approaches unsuitable.
+
+More social model of learning often propose social apprenticeship approaches.
+
+In this setting there were limits to this approach due to the limits of my attention, and also limits in terms of my technical fluency in the details of the language and framework being used.
+
+For example, to troubleshoot a code error might take between one minute and 10 minuted depending on the complexity of it. To work with participants to identify and then implement a new coding structure could take up to 30 minutes.
+
+At times I was able to identify a discreet new code construct and to implement an example of this between sessions. At times I would attempt to do this in the group setting with varying results. 
+
+The conflict was distinct from the previous one in that it related less to identity and alienation from the whole process and was manifested in periods of frustration and inactivity.
+
+The lack of a
 
 
 **Learner choice over game design vs templated approach**
@@ -725,14 +745,6 @@ There were two main ways of approaching adding a new pattern. One to examing a c
 
 This would involve searching for new code constructs and notes in the code designed to orientate the learner, alerting them to the location and purpose of the relevant code. The other was longer form step by step help.
 
-
-
-
-#### Code playgrounds,  and web technology
-
-The last chapter outlined the use and design characteristics of the starting point of an incomplete 2D platformer with low-spec graphics, with graphical scaffolding for text-based code, and deliberately broken.
-
-While the following chapter explores the use of game design patterns in detail, this section addresses the impact of the template on participant coding practices, based on video observations of learners directly interaction with the template triangulated with journal notes from phases 2 and 3 and participant feedback from phase one.
 
 #### Structuring supporting resources
 
