--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -588,7 +588,7 @@ Similarly, in my journal notes, I reflect on the difficulty of interrupting the 
 **Restricted vs extended community - e.g. why not scratch with online community?**
 
 Beyond technical considerations regarding scratch and use of physics etc,
-Learning technology in community settings can engender feelings of agency and motivation from part of wide network and the  diverse pathways. [@blunden_interdisciplinary_2009.
+Learning technology in community settings can engender feelings of agency and motivation from part of wide network and the  diverse pathways. [@blunden_interdisciplinary_2009].
 
 Time consideration of the process of being involved in an online community may remove time spent doing real life playtesting.
 
@@ -658,7 +658,7 @@ In this setting there were limits to this approach due to the limits of my atten
 
 For example, to troubleshoot a code error might take between one minute and 10 minuted depending on the complexity of it. To work with participants to identify and then implement a new coding structure could take up to 30 minutes.
 
-At times I was able to identify a discreet new code construct and to implement an example of this between sessions. At times I would attempt to do this in the group setting with varying results. 
+At times I was able to identify a discreet new code construct and to implement an example of this between sessions. At times I would attempt to do this in the group setting with varying results.
 
 The conflict was distinct from the previous one in that it related less to identity and alienation from the whole process and was manifested in periods of frustration and inactivity.
 
