conflict of lack of support

--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -622,8 +622,7 @@ I was struck that his incident happened during a session where I had not played 
 
 This tensions was resolved partly by freeing up some patterns of collaboration and interaction and removing others.
 
-In terms of accessing technical help I was given feedback from one parent that asking on for technical help via an email forum not something that they felt comfortable doing.  
-The same family also gave useful feedback about social norms of not bothering people getting in the way of asking for help.
+
 
 The process of parents getting in the way of children's not minding jumping in and invading social space struck me. Together with the frustrations of complexities of larger group work the restrictions created a tension between the suggested community norm of how division of labour was organised.
 
@@ -636,13 +635,23 @@ The fruits of this freedom of participation are explored in chapter five.
 
 #### Navigating the conflict
 
-**Barrier - lack of software feedback - MOVE TO NEXT SECTION OR KEEP HERE AS A LINK?**
+**Via exit**
+
+One way of navigating this was via exit and certain families did drop out at different phases.
+
+**LINK - Overcoming lack of software feedback - MOVE TO NEXT SECTION OR KEEP HERE AS A LINK?**
 
 One design principle explored in the literature review [@resnick_designing_2013] in the use of creative coding tools was that of immediate feedback for participants. Code playgrounds provide such immediate feedback. For example, in the code editing interface of glitch.com shown in Illustration 1, changes made to the code on the left section take immediate effect in the resultant game on the right side of the screen.
 
 INSERT SIDE BY SIDE SCREEN SHOT
 
+
+The next chapter explores responses to this aspect in more detail.
+Link
+
 MOVE NEXT?
+
+
 
 **Narrative summary of conflict**
 
@@ -650,7 +659,11 @@ The conflict comprised of compounding factors.
 
 ### 2. Participant conflict due to lack of relevant technical support
 
-The nature of this conflict was compounded tensions surrounding  and knowledge of coding and lack of access to relevant technical support. While tensions between lack of knowledge in how to undertake activities are common in learning environments, the informal nature of this learning setting made most classroom approaches unsuitable.
+The nature of this conflict stemmed from tensions surrounding  and knowledge of coding and lack of access to relevant technical support.
+
+The conflict was distinct from the previous one in that it related less to identity and alienation from the whole process and was manifested in periods of frustration and inactivity where participants wanted to progress but were unable to.
+
+While tensions between lack of knowledge in how to undertake activities are common in learning environments, the informal nature of this learning setting made most classroom approaches unsuitable.
 
 More social model of learning often propose social apprenticeship approaches.
 
@@ -660,9 +673,21 @@ For example, to troubleshoot a code error might take between one minute and 10 m
 
 At times I was able to identify a discreet new code construct and to implement an example of this between sessions. At times I would attempt to do this in the group setting with varying results.
 
-The conflict was distinct from the previous one in that it related less to identity and alienation from the whole process and was manifested in periods of frustration and inactivity.
+Based on group work with adults on creating media projects together I created an email group that all participants could post to to ask for help. However this option was hardly ever used taken up. I was given feedback from one parent that asking on for technical help via an email forum not something that they felt comfortable doing.  
+The same family also gave useful feedback about social norms of not bothering people getting in the way of asking for help.
 
-The lack of a
+Thus other ways of addressing this conflict were called for.
+
+The need to get started somewhere emerged - and the template was a response to that.
+Just an immediate, intuitive way to bring something to the table as a starting point to develop.
+The template was based on a prominent tutorial on the phaser website called Making your first game.
+https://web.archive.org/web/20180426051205/http://phaser.io/tutorials/making-your-first-phaser-2-game
+
+As preparation for the sessions I had followed the tutorial. When the  and adapted it. I removed out as much code as possible and thus simplifying the structure and readability.
+  https://github.com/glitch-game-club/glitch-game-club/blob/master/games
+
+
+Other interventions were called for directly by parents. Some were slightly unexpected. in particular the call for tutorials.  Despite the general agreement that taught input in class time was not welcome, support resources that did teach coding materials would be welcomed by some families.
 
 
 **Learner choice over game design vs templated approach**
